# sample-best-practices-for-life-science-research-agents

./: .gitignore  README.md  pyproject.toml
agentcore-chat/: README.md  pyproject.toml
agentcore-chat/examples/basic/: basic_agent.py  requirements.txt
agentcore-chat/examples/streaming/: streaming_agent.py  utils.py
agentcore-chat/src/agentcore_chat/: __init__.py  response_handler.py
infrastructure/: agentcore.yaml  cfn.yaml  codebuild.yaml  cognito.yaml  dynamodb.yaml  infrastructure.yaml  root.yaml  sagemaker.yaml  streamlit.yaml  streamlit_build_agentcore.yaml
infrastructure/app/: Dockerfile  app.py  requirements.txt
infrastructure/lambda/: api_spec.json  package_for_lambda.py  requirements.txt
infrastructure/lambda/src/: database.py  lambda_function.py
labs/01-agents/: 01-use-tools-to-search-pmc.ipynb
labs/01-agents/01-pmc-abstract-search/: 01-pmc-abstract-search.ipynb  agent.py  config.py  invoke_agentcore.py  notebook.ipynb  requirements.txt  search_pmc.py  variables.py
labs/01-agents/02-collect-evidence/: 02-collect-evidence.ipynb
labs/01-agents/02-gather-evidence/: 02-gather-evidence.ipynb  agent.py  config.py  gather_evidence.py  helpers.py  requirements.txt  search_pmc.py
labs/01-agents/03-reason-and-plan/: 03-reason-and-plan.ipynb  agent.py  config.py  gather_evidence.py  requirements.txt  search_pmc.py
labs/01-agents/04-multi-agent-orchestration/: 04-multi-agent-orchestration.ipynb  deep_research_example.md  gather_evidence.py  gather_evidence_ddb.py  generate_report.py  helpers.py  lead_agent.py  lead_config.py  pmc_research_agent.py  requirements.txt  search_pmc.py  writer_config.py
labs/02-tools/: README.md
labs/02-tools/01-database-tools-gateway/: .bedrock_agentcore.yaml  01-database-tools-gateway.ipynb  agent.py  cognito_credentials_provider.py  database_tools.py  utils.py
prerequisite/: agentcore.yaml  cognito.yaml  create_lambda_zip.py  infrastructure.yaml
prerequisite/lambda-database/: api_spec.json
scripts/: cognito_credentials_provider.py  prereq.sh
src/workshop_tools/: __init__.py  agent_client.py  agent_runtime_service.py  chat.py  response_handler.py
(+11 files in other folders)
